--- a/app/static/css/app.css
+++ b/app/static/css/app.css
@@ -1,3 +1,94 @@
 body {
     padding-top: 5rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+/* body {
+    font-family: 'Arial', sans-serif;
+    background-color: #f4f4f4;
+    margin: 0;
+    padding: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+} */
+
+.profile-card {
+    background-color: #fff;
+    border-radius: 8px;
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    overflow: hidden;
+    width: 30vw;
+    text-align: center;
+    
+}
+
+.profile-header {
+    background-color: #8BC34A;
+    padding: 20px;
+}
+
+.profile-picture {
+    width: 120px;
+    height: 120px;
+    border-radius: 50%;
+    border: 3px solid white;
+    object-fit: cover;
+}
+
+.profile-header h1,
+.profile-header p {
+    color: white;
+    margin: 10px 0;
+}
+
+.profile-bio {
+    padding: 20px;
+    border-bottom: 1px solid #eaeaea;
+}
+
+.profile-stats {
+    display: flex;
+    justify-content: space-around;
+    padding: 20px;
+}
+
+.stat {
+    text-align: center;
+}
+
+.number {
+    display: block;
+    font-size: 20px;
+    color: #333;
+    font-weight: bold;
+}
+
+.stat-name {
+    color: #777;
+    font-size: 12px;
+    text-transform: uppercase;
+}
+
+.follow-btn {
+    background-color: #FF9800;
+    color: white;
+    padding: 10px 20px;
+    border: none;
+    border-bottom: 4px solid #E68A00;
+    width: 50%;
+    font-size: 16px;
+    cursor: pointer;
+    outline: none;
+    margin-bottom: 24px;
+}
+
+.follow-btn:hover {
+    background-color: #FFA726;
+}
+
+.follow-btn:active {
+    border-bottom: 2px solid #E68A00;
 }
